@@ -128,6 +128,7 @@ LEGAL_VALUES = {
         'it': 'Italian',
         ('ja', '!jp'): 'Japanese',
         'ko': 'Korean',
+        'lt': 'Lithuanian',
         'nb': 'Norwegian Bokmål',
         'nl': 'Dutch',
         'pa': 'Punjabi',
@@ -198,6 +199,7 @@ LEGAL_VALUES = {
         it='it',
         ja='ja',
         ko='kr',  # kr is South Korea, ko is the Korean language
+        lt='lt',
         nb='no',
         nl='nl',
         pl='pl',
@@ -242,6 +244,7 @@ LEGAL_VALUES = {
         it='it',
         ja='ja',
         ko='ko',
+        lt='lt',
         nb='nb',
         nl='nl',
         pl='pl',
@@ -272,6 +275,7 @@ LEGAL_VALUES = {
         'hr': 'hr',
         'hu': 'hu',
         'it': 'it',
+        'lt': 'lt',
         'nb': 'nb',
         'nl': 'nl',
         'pl': 'pl',
